# mi-firmware-updater

./: .gitignore  .gitmodules  README.md  Supported.md  devices  helpers.py  mise.toml  miuiversion  miuiversions  post_updates.py  pyproject.toml  renovate.json5  requirements.txt  script.sh  stable.json  stable.yml  supported.md  weekly.json  weekly.yml  xda_template.txt  xda_threads.json  xda_threads.yml  xfu.py
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
changelog/8.1.11/: 8.1.11.md5  jason-MINote3.diff  oxygen-MIMAX2.diff  tiffany-MI5X.diff  vince-HM5Plus.diff
changelog/8.1.18/: 8.1.18.md5  capricorn-MI5S.diff  gemini-MI5.diff  jason-MINote3.diff  oxygen-MIMAX2.diff  riva-HM5A.diff  sagit-MI6Global.diff  santoni-HM4XGlobal.diff  tiffany-MI5X.diff  vince-HM5Plus.diff
changelog/8.1.25/: 8.1.25.md5  jason-MINote3.diff  oxygen-MIMAX2.diff  riva-HM5A.diff  rosy-HM5.diff  sagit-MI6.diff  ugg-HMNote5A.diff
changelog/8.1.4/: 8.1.4.md5
changelog/8.2.1/: 8.2.1.md5  gemini-MI5.diff  natrium-MI5SPlusGlobal.diff  rosy-HM5.diff  santoni-HM4XGlobal.diff  tiffany-MI5X.diff  vince-HM5Plus.diff
changelog/8.2.24/: 8.2.24.md5
changelog/8.2.8/: 8.2.8.md5  natrium-MI5SPlusGlobal.diff  rolex-HM4AGlobal.diff  sagit-MI6Global.diff  ugg-HMNote5AGlobal.diff
changelog/8.3.1/: 8.3.1.md5
changelog/8.3.15/: 8.3.15.md5
changelog/8.3.22/: 8.3.22.md5  chiron-MIMIX2.diff  gemini-MI5Global.diff  natrium-MI5SPlus.diff  oxygen-MIMAX2.diff  riva-HM5A.diff  sagit.txt  tiffany-MI5X.diff  vince-HM5Plus.diff
changelog/8.3.29/: 8.3.29.md5  oxygen-MIMAX2.diff  rolex-HM4AGlobal.diff  rosy-HM5.diff  sagit-MI6Global.diff  sagit.diff  santoni-HM4X.diff  tiffany-MI5X.diff  vince-HM5Plus.diff
changelog/8.3.8/: 8.3.8.md5  jason-MINote3.diff  oxygen-MIMAX2Global.diff  rolex-HM4AGlobal.diff  rosy-HM5.diff  sagit-MI6Global.diff  (+5 more)
devices/: stable_devices.json  stable_devices.yml  weekly_devices.json  weekly_devices.yml
tests/: test_set_version.py
xiaomi_firmware_updater/: __init__.py  __main__.py  main.py  rom.py  xda_template.txt  xda_threads.yml
(+11 files in other folders)
