[tool.poetry]
name = "xiaomi-firmware-updater"
version = "6.0.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
PyYAML = "^6.0"
"github3.py" = "^3.2.0"
python-telegram-bot = "^20.3"
xiaomi_flashable_firmware_creator = "^2.2.12"
humanize = "^4.5.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
