[project]
name = "xiaomi-firmware-updater"
version = "6.0.0"
description = "Auto generates Xiaomi firmware flashable zip files every MIUI / Hyper OS new update."
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "github3-py>=4.0.1",
    "humanize>=4.11.0",
    "python-telegram-bot>=21.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "xiaomi-flashable-firmware-creator>=2.2.13",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]

[tool.ruff]
fix = true
src = ["xiaomi_firmware_updater"]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
