[project]
name = "xiaomi-firmware-updater"
version = "6.0.0"
description = "Auto generates Xiaomi firmware flashable zip files every MIUI / Hyper OS new update."
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "github3-py>=4.0.1",
    "humanize>=4.13.0",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "xiaomi-flashable-firmware-creator>=2.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.13.3",
]

[tool.ruff]
fix = true
src = ["xiaomi_firmware_updater"]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
